Testing functionality of persisting with hibernate